--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -2,3 +2,11 @@
 @import "alert";
 @import "avatar";
 @import "navbar";
+@import "form_legend_clear";
+@import "card_product";
+@import "cards";
+@import "card_trip";
+@import "banner";
+@import "button";
+@import "footer";
+@import "container";
