--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,7 +12,7 @@
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
         <li class="nav-item active d-flex">
-          <%= link_to "Add post", new_post_path, class: "btn-flat-add-article-navbar" %>
+          <%= link_to "Add post", new_post_path, class: "btn-flat" %>
         </li>
         <li class="nav-item">
           <%= link_to "Messages", "#", class: "nav-link" %>
