cloudinary and some design done

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -5,6 +5,13 @@
   justify-content: space-between;
 }
 
+.cards-by-3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 16px;
+  justify-content: space-between;
+}
+
 .home-cards {
   display: flex;
   background: white;
@@ -55,6 +62,9 @@
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+  .cards-by-3 {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
@@ -62,6 +72,9 @@
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+  .cards-by-3 {
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
