--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -3,6 +3,7 @@
     <%= f.input :title %>
     <%= f.input :content %>
     <%= f.input :url %>
+    <%= f.input :photo, as: :file %>
     <%= f.submit "Submit", class: "btn btn-primary" %>
   <% end %>
 </div>
