--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
   <h2 class="text-center mt-4 mb-4 p-4" >How it works?</h2>
 
-  <div class="cards">
+  <div class="cards-by-3">
 
     <div class="card">
       <img src="https://cdn-icons-png.flaticon.com/512/4661/4661257.png" alt="">
