my posts and rights on edit done

--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -4,6 +4,6 @@
     <%= f.input :content %>
     <%= f.input :url %>
     <%= f.input :photo, as: :file %>
-    <%= f.submit "Submit", class: "btn btn-primary" %>
+    <%= f.submit "Submit", class: "btn btn-dark btn-delete text-white justify-content-center rounded" %>
   <% end %>
 </div>
