many little stuff done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,19 +12,19 @@
   <div class="cards-by-3">
 
     <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/4661/4661257.png" alt="">
+      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-3_copy_iqji9m.jpg" alt="">
       <h4>Read</h4>
       <p>All your news in one place, fast-pace!</p>
     </div>
 
     <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/4661/4661257.png" alt="">
+      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269654/Untitled-4_dvrlun.jpg" alt="">
       <h4>Comment</h4>
       <p>Like or don't like it? Just say it!</p>
     </div>
 
     <div class="card">
-      <img src="https://cdn-icons-png.flaticon.com/512/4661/4661257.png" alt="">
+      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-1_copy_fbtbcr.jpg" alt="">
       <h4>Add</h4>
       <p>Share your own news but not old news!</p>
     </div>
