added comment and user in cards

--- a/app/views/posts/_comments_card.html.erb
+++ b/app/views/posts/_comments_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card-product">
+<div class="card-comment">
     <div class="card-product-infos">
       <i class="fas fa-user icon"></i>
           <span class = "font-weight-bold text-dark"><%= comment.user.nickname %></span>
