--- a/app/assets/stylesheets/components/_card_product.scss
+++ b/app/assets/stylesheets/components/_card_product.scss
@@ -5,7 +5,6 @@
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
-  margin-bottom: 16px;
 }
 
 .card-product img {
@@ -41,4 +40,18 @@
 
 .card-product .card-product-infos {
   padding: 16px;
+}
+
+.card-with-comments{
+}
+
+.card-comment {
+  overflow: hidden;
+  height: 100px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+  padding: 16px;
+  margin-bottom: 16px;
 }
