--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -38,9 +38,20 @@
   border: 1px solid rgb(230,230,230);
 }
 
+.comments {
+  display: flex;
+  background-color: #343a40;
+  color: white;
+  justify-content: space-between;
+  padding: 8px 16px;
+}
+
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .cards {
+    grid-template-columns: 1fr;
+  }
+  .cards-by-3 {
     grid-template-columns: 1fr;
   }
 }
@@ -50,11 +61,17 @@
   .cards {
     grid-template-columns: 1fr;
   }
+  .cards-by-3 {
+    grid-template-columns: 1fr;
+  }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .cards {
+    grid-template-columns: 1fr 1fr;
+  }
+  .cards-by-3 {
     grid-template-columns: 1fr 1fr;
   }
 }
