--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -1,4 +1,11 @@
 .fa-user:before {
-  font-size: 15px;
+  font-size: 18px;
   color: #F5B02C;
+}
+
+.icon {
+  align-self: center;
+  font-size: 18px;
+  color: #F5B02C;
+  padding-right: 8px;
 }
