--- a/app/views/pages/_post_card.html.erb
+++ b/app/views/pages/_post_card.html.erb
@@ -1,9 +1,15 @@
-<div class="card-product">
-  <%= link_to post_path(post) do %>
-    <%= cl_image_tag post.photo.key, height: 800, width: 800, crop: :fill %>
-    <div class="card-product-infos">
-      <h2><%=post.title%></h2>
-      <p><%=truncate(post.content, length: 150)%></p>
+
+<div class = "card-with-comments">
+  <div class="card-product">
+    <%= link_to post_path(post) do %>
+      <%= cl_image_tag post.photo.key, height: 800, width: 800, crop: :fill %>
+      <div class="card-product-infos">
+        <h2><%=post.title%></h2>
+        <p><%=truncate(post.content, length: 150)%></p>
     <% end %>
+      </div>
+  </div>
+  <div class = "comments">
+    <div class = "d-flex align-self-start">  <i class="fa-solid fa-comment-dots icon"></i></i> <%=post.comments.count%> </div>
     </div>
 </div>
