--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class = container>
+<div class = "container">
   <h1>We have <%= Post.count %> Posts</h1>
   <div class = "cards">
     <% @posts.each do |post|%>
