--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,30 +12,30 @@
   <div class="cards-by-3">
 
     <div class="card">
-      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-3_copy_iqji9m.jpg" alt="">
+      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-3_copy_iqji9m.jpg" style ="width: 50%" alt="">
       <h4>Read</h4>
       <p>All your news in one place, fast-pace!</p>
     </div>
 
     <div class="card">
-      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269654/Untitled-4_dvrlun.jpg" alt="">
+      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269654/Untitled-4_dvrlun.jpg" style ="width: 50%" alt="">
       <h4>Comment</h4>
       <p>Like or don't like it? Just say it!</p>
     </div>
 
     <div class="card">
-      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-1_copy_fbtbcr.jpg" alt="">
+      <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-1_copy_fbtbcr.jpg" style ="width: 50%" alt="">
       <h4>Add</h4>
       <p>Share your own news but not old news!</p>
     </div>
   </div>
-  <div class="cta p-3">
+  <div class="cta p-3 mt-4">
     <%= link_to "See all articles", posts_path, class:"btn-flat"%>
   </div>
 </div>
 
   <!-- code a footer -->
-  <div class="footer mt-4 text-align-center">
+  <div class="footer mt-1 text-align-center">
     <div class="links">
       <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
       <a href="#"><i class="fab fa-fw fa-github"></i></a>
