--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -2,8 +2,8 @@
   <%= simple_form_for @post do |f| %>
     <%= f.input :title %>
     <%= f.input :content %>
-    <%= f.input :url %>
-    <%= f.input :photo, as: :file %>
+    <%= f.input :url, input_html: { required: true } %>
+    <%= f.input :photo, as: :file, required: true %>
     <%= f.submit "Submit", class: "btn btn-dark btn-delete text-white justify-content-center rounded" %>
   <% end %>
 </div>
