added multi photo

--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -3,7 +3,7 @@
     <%= f.input :title %>
     <%= f.input :content %>
     <%= f.input :url, input_html: { required: true } %>
-    <%= f.input :photo, as: :file, required: true %>
+    <%= f.input :photos, as: :file, input_html: { multiple: true }, required: true %>
     <%= f.submit "Submit", class: "btn btn-dark btn-delete text-white justify-content-center rounded" %>
   <% end %>
 </div>
