--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,7 @@
 <div class = "container">
   <%= link_to "<< Back", posts_path, class:"btn btn-dark rounded"%>
   <div class="card-trip mt-3">
-    <% @post.photos.each do |photo| %>
-    <%= cl_image_tag photo.key, height: 400, width: 900, crop: :fill %>
-    <% end %>
+    <%= cl_image_tag @post.photo.key, height: 400, width: 900, crop: :fill %>
     <div class="card-trip-infos">
       <div>
         <h1><%=@post.title%></h1>
