--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1495020689067-958852a7765e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80)">
   <div class="container">
-    <h1>Welcome on <strong>News Now!</strong></h1>
-    <p>All your news, all in one page</p>
-    <%= link_to "See all articles", posts_path, class:"btn-flat"%>
+    <h1>Welcome on our <strong>MOVING OUT SALE</strong></h1>
+    <p>Find all our items for sales in Bangkok Thonglor</p>
+    <%= link_to "See all the classified ads", posts_path, class:"btn-flat"%>
   </div>
 </div>
 
@@ -13,8 +13,8 @@
 
     <div class="card">
       <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-3_copy_iqji9m.jpg" style ="width: 50%" alt="">
-      <h4>Read</h4>
-      <p>All your news in one place, fast-pace!</p>
+      <h4>Check</h4>
+      <p>All the items we want to sell!</p>
     </div>
 
     <div class="card">
@@ -25,8 +25,8 @@
 
     <div class="card">
       <img src="https://res.cloudinary.com/messa57fr/image/upload/v1657269269/Untitled-1_copy_fbtbcr.jpg" style ="width: 50%" alt="">
-      <h4>Add</h4>
-      <p>Share your own news but not old news!</p>
+      <h4>Contact</h4>
+      <p>Contact us for more informations!</p>
     </div>
   </div>
   <div class="cta p-3 mt-4">
