--- a/app/views/posts/_post_card.html.erb
+++ b/app/views/posts/_post_card.html.erb
@@ -1,15 +1,20 @@
 <div class = "card-with-comments">
+  <%= link_to post_path(post) do %>
   <div class="card-product">
-    <%= link_to post_path(post) do %>
-      <%= cl_image_tag post.photo.key, height: 800, width: 800, crop: :fill %>
-      <div class="card-product-infos">
-        <h2><%=post.title%></h2>
-        <p><%=truncate(post.content, length: 150)%></p>
-    <% end %>
-      </div>
+    <%= cl_image_tag post.photo.key, height: 800, width: 800, crop: :fill %>
+    <div class="card-product-infos">
+      <h2><%=post.title%></h2>
+      <p><%=truncate(post.content, length: 150)%></p>
+
+    </div>
   </div>
   <div class = "comments">
-    <div class = "d-flex align-self-start">  <i class="fa-solid fa-comment-dots icon"></i></i> <%=post.comments.count%> </div>
-    <div class = "d-flex align-self-end">  <i class="fas fa-user icon"></i> <%=post.user.nickname%> </div>
+    <div class = "d-flex align-self-end">  <i class="fa-solid fa-copyright icon"></i> <%= post.brand %> </div>
+    <div class = "d-flex align-self-start">  <i class="fa-solid fa-comment-dots icon"></i> <%=post.comments.count%> </div>
   </div>
+  <div class = "comments">
+    <div class = "d-flex align-self-start">  <i class="fa-solid fa-list icon"></i> <%=post.category%> </div>
+    <div class = "d-flex align-self-end">  <i class="fa-solid fa-money-bill icon"></i> <%= number_with_delimiter(post.price, :delimiter => ',')%> ฿</h3></div>
+  </div>
+  <% end %>
 </div>
