--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,12 @@
 <div class = "container">
   <%= link_to "<< Back", posts_path, class:"btn btn-dark rounded"%>
   <div class="card-trip mt-3">
-    <%= cl_image_tag @post.photo.key, height: 400, width: 900, crop: :fill %>
+    <%= cl_image_tag @post.photo.key, height: 300, width: 600, crop: :fill %>
     <div class="card-trip-infos">
       <div>
         <h1><%=@post.title%></h1>
-        <p>Reference: <%= link_to @post.url%></p>
-        <div class= "content"><p><%= @post.content%></p></div>
+        <div class = "content"><h5><%= @post.content%></h5></div>
+        <%= link_to "More infos", @post.url, target: :_blank, class:"btn btn-dark btn-delete text-white justify-content-center rounded"%>
       </div>
     </div>
 
@@ -21,7 +21,8 @@
   <div class="form-container">
     <div class="form-wrapper mt-3 mb-3 w-100">
       <%= simple_form_for [@post, @comment] do |f| %>
-        <%= f.input :content, as: :text, required: true, placeholder: 'Enter your comments here', label: 'Enter your comments here' %>
+        <%= f.input :content, as: :string, required: true, placeholder: Faker::Name.name, label: 'Enter your name here' %>
+        <%= f.input :content, as: :text, required: true, placeholder: Faker::Quote.famous_last_words, label: 'Enter your comments here' %>
         <%= f.button :submit, "Comment", class: "w-100 btn-flat text-white mx-auto d-flex justify-content-center" %>
       <% end %>
     </div>
