--- a/app/views/posts/_comments_card.html.erb
+++ b/app/views/posts/_comments_card.html.erb
@@ -1,7 +1,7 @@
 <div class="card-comment">
     <div class="card-product-infos">
       <i class="fas fa-user icon"></i>
-          <span class = "font-weight-bold text-dark"><%= comment.user.nickname %></span>
+          <span class = "font-weight-bold text-dark"><%= comment.name %></span>
           <p><%= comment.content %></p>
     </div>
 </div>
