--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class = "container">
-  <h1>We have <%= Post.count %> Posts</h1>
+  <h1>We have <%= Post.count %> Ads</h1>
   <div class = "cards">
     <% @posts.each do |post|%>
       <%= render 'post_card', post: post %>
