--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -37,10 +37,10 @@
   <!-- code a footer -->
   <div class="footer mt-1 text-align-center">
     <div class="links">
-      <a href="#"><i class="fab fa-fw fa-facebook-f"></i></a>
-      <a href="#"><i class="fab fa-fw fa-github"></i></a>
-      <a href="#"><i class="fab fa-fw fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-fw fa-instagram"></i></a>
+      <a href="https://web.facebook.com/marketplace/profile/1386053112/?ref=share_attachment"><i class="fab fa-fw fa-facebook-f"></i></a>
+      <a href="https://github.com/Messa57fr"><i class="fab fa-fw fa-github"></i></a>
+      <a href="https://twitter.com/messa57fr"><i class="fab fa-fw fa-twitter"></i></a>
+      <a href="https://www.instagram.com/messa57fr"><i class="fab fa-fw fa-instagram"></i></a>
       <p>This website was coded with <i class="fas fa-heart"></i> by Sam ^^</p>
     </div>
   </div>
