--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -1,6 +1,6 @@
 <div class = container>
   <%= simple_form_for @post do |f| %>
-    <%= f.input :category, collection: $CATEGORIES,%>
+    <%= f.input :category, collection: $CATEGORIES %>
     <%= f.input :title %>
     <%= f.input :content %>
     <%= f.input :brand %>
