--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/messa57fr/image/upload/v1658168422/erda-estremera-sxNt9g77PE0-unsplash_nmffck.jpg)">
   <div class="container">
-    <h1>Welcome to our <strong>MOVING OUT SALE</strong></h1>
+    <h1> Pakki & Sam <strong>MOVING OUT SALE</strong></h1>
     <p>Find all our items for sales in Bangkok - Thonglor</p>
     <%= link_to "Show me the Sales!", posts_path, class:"btn-flat"%>
   </div>
