--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <h1> Pakki & Sam <strong>MOVING OUT SALE</strong></h1>
     <p>Find all our items for sales in Bangkok - Thonglor</p>
-    <%= link_to "Show me the Sales!", posts_path, class:"btn-flat"%>
+    <%= link_to "Show me the Sale!", posts_path, class:"btn-flat"%>
   </div>
 </div>
 
