--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
       <div>
         <h1><%=@post.title%></h1>
         <div class = "content"><%= simple_format(@post.content)%></div>
-        <div class = "d-flex align-self-start text-dark mt-3 mb-3"> <i class="fa-solid fa-money-bill icon"></i><%=@post.price%> THB</div>
+        <div class = "d-flex align-self-start text-dark mt-3 mb-3"> <i class="fa-solid fa-money-bill icon"></i><%=number_with_delimiter(post.price, :delimiter => ',')%> THB</div>
         <%= link_to "More infos", @post.url, target: :_blank, class:"mt-2 btn btn-dark btn-delete text-white justify-content-center rounded"%>
       </div>
     </div>
